backfilled dev logs

--- a/dev-write-up/0.md
+++ b/dev-write-up/0.md
@@ -38,7 +38,7 @@ RAG pipeline.
 
 ### LangChain and LangGraph
 
-I'm not sure if camelcase is the right way to spell these but whatever. It seems like these libraries are the 
+I'm not sure if PascalCase is the right way to spell these but whatever. It seems like these libraries are the 
 way to interact with LLMs. LangGraph I think makes sense to me and feels like a nice way to build more complex workflows 
 with these things. 
 
